# crispy-home-power

./: 48V pack Flashing procedures.docx  README.md
battery/: .gitignore  Cargo.toml  build.rs  powertrain.dbc  powertrain_multimod_12_v0.7.8.dbc  powertrain_multimod_v78.00.007.dbc
battery/doc/: 48V pack Flashing procedures_arbitration.docx
battery/src/: app.rs  lib.rs  main.rs  tui.rs
charger/: .gitignore  Cargo.toml  build.rs  delta_q.dbc
charger/src/: main.rs
docs/CANOpen v3.4/: CANOPEN STD v3.4.0 ELECTRONIC DATASHEET.eds  CANOPEN STD v3.4.0 INTERFACE GLOSSARY.html  CANOPEN STD v3.4.0 INTERFACE XML DESCRIPTOR FILE.xdd
